--- a/index.html
+++ b/index.html
@@ -38,6 +38,27 @@
             </div>
         </header>
 
+        <!-- header content start -->
+
+        <section>
+            <div class="header-section-wrapper">
+                <div class="section-left">
+                    <h1>Start your Journey as <br>
+                    Influencer</h1>
+                    <p>We Have world Class Speaker and Radio Jockey <Br> Also we are Commited with our Clients</p>
+                    <button class="button">Prebook now <i class="fas fa-arrow-right"></i></button>
+                </div>
+
+                <div class="section-right">
+                    <img src="images/mic.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- header part end  -->
+
+        
+
 
 
 
