--- a/index.html
+++ b/index.html
@@ -57,7 +57,21 @@
 
         <!-- header part end  -->
 
-        
+        <!-- logo part start -->
+
+        <section>
+            <div class="logo-wrapper">
+                <div class="logo">
+                    <div><img src="logos/Alibaba.svg" alt=""></div>
+                    <div><img src="logos/Amazon.svg" alt=""></div>
+                    <div><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+                    <div><img src="logos/Ebay.svg" alt=""></div>
+                    <div><img src="logos/Rakuten.svg" alt=""></div>
+                    <div><img src="logos/Walmart.svg" alt=""></div>
+                    <div><img src="logos/Target.svg" alt=""></div>
+                </div>
+            </div>
+        </section>
 
 
 
