--- a/index.html
+++ b/index.html
@@ -73,6 +73,190 @@
             </div>
         </section>
 
+        <!-- logo end -->
+
+        <!-- products section start -->
+
+        <section>
+            <div class="collection-wrapper">
+                <h2 class="text">Popular Collection</h2>
+                <div class="upper">
+
+                    <div class="upper-one">
+                        <img src="images/tripod.png" alt="">
+                            <h2>Flex Tripod</h2>
+                            <h4>$40.56</h4>
+                            <div class="upper-icons">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                                <span class="rating">4.99</span>
+                            </div>
+                            <div class="upper-one-bottom">
+                                <span>Delivery Anywhere</span><Br>
+                                <span>Available</span><br>
+                                <span>Buyers protection possible!</span>
+                            </div>                  
+                    </div>
+
+                    <div class="upper-two">
+                        <img src="images/mic.png" alt="">
+                        <h2>Microphone</h2>
+                        <h4>$120.00</h4>
+                        <div class="upper-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.59</span>
+                        </div>
+                        <div class="upper-one-bottom">
+                            <span>Delivery Anywhere</span><Br>
+                            <span>Available</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="upper-three">
+                        <img src="images/airpod.png" alt="">
+                        <h2>Airbuds</h2>
+                        <h4>$100.56</h4>
+                        <div class="upper-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.55</span>
+                        </div>
+                    <div class="upper-one-bottom">
+                        <span>Worldwide Delivery</span><Br>
+                        <span>Online Payment</span><br>
+                        <span>Buyers protection possible!</span>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="middle">
+                    <div class="middle-one">
+                        <img src="images/drone.png" alt="">
+                        <h2>Drone</h2>
+                        <h4>$990.56</h4>
+                        <div class="middle-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.99</span>
+                        </div>
+                        <div class="middle-one-bottom">
+                            <span>Heavy Weight Drone</span><Br>
+                            <span>Available</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    
+                    <div class="middle-two">
+                        <img src="images/lights.png" alt="">
+                        <h2>Light Setup</h2>                            
+                        <h4>$1200.00</h4>
+                        <div class="middle-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.59</span>
+                        </div>
+                        <div class="middle-one-bottom">
+                            <span>Delivery Anywhere</span><Br>
+                            <span>Available</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="middle-three">
+                        <img src="images/setup.png" alt="">
+                        <h2>Photoshoot set</h2>
+                        <h4>$820.40</h4>
+                        <div class="middle-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.55</span>
+                        </div>
+                        <div class="middle-one-bottom">
+                            <span>Worldwide Delivery</span><Br>
+                            <span>Online Payment</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="lower">
+                    <div class="lower-one">
+                        <img src="images/camera.png" alt="">
+                        <h2>Vlogging Camera</h2>
+                        <h4>$180.80</h4>
+                        <div class="lower-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.99</span>
+                        </div>
+                        <div class="lower-one-bottom">
+                            <span>Heavy Weight Drone</span><Br>
+                            <span>Available</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    
+                    <div class="lower-two">
+                        <img src="images/single-light.png" alt="">
+                        <h2>Green Screen</h2>
+                        <h4>$25.48</h4>
+                        <div class="lower-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.59</span>
+                        </div>
+                        <div class="lower-one-bottom">
+                            <span>Delivery Anywhere</span><Br>
+                            <span>Available</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                    <div class="lower-three">
+                        <img src="images/action.png" alt="">
+                        <h2>Action Camera</h2>
+                        <h4>$380.40</h4>
+                        <div class="lower-icons">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                            <span class="rating">4.55</span>
+                        </div>
+                        <div class="lower-one-bottom">
+                            <span>Worldwide Delivery</span><Br>
+                            <span>Online Payment</span><br>
+                            <span>Buyers protection possible!</span>
+                        </div>
+                    </div>
+                 </div>
+        </section>
+
 
 
 
