studio setup done

--- a/index.html
+++ b/index.html
@@ -254,7 +254,26 @@
                             <span>Buyers protection possible!</span>
                         </div>
                     </div>
+                    <div class="lower-three-text">
+                        <p>See More <i class="fas fa-arrow-right"></i></p>
+                    </div>
                  </div>
+        </section>
+
+        <!-- bonus part start -->
+
+        <section>
+            <div class="wrapper">
+                <div class="left-content">
+                    <img src="images/setup.jpeg" alt="">
+                </div>
+
+                <div class="right-content">
+                    <h1>Our Recent Studio Setup</h1>
+                    <p>We are Buy some new camera setup for our studio. it is all imported from Chaina and number one quality products</p>
+                    <button class="button">See More <i class="fas fa-arrow-right"></i></button>
+                </div>
+            </div>
         </section>
 
 
